# alco

./: Cargo.toml  README.md
alco/: Cargo.toml
alco/src/: lib.rs
examples/: fibonacci.rs
src/: error.rs  lib.rs  main.rs  model.rs  params.rs
src/model/: chebyshev.rs  mod.rs
src/params/: builder.rs  mod.rs  sample.rs  samples.rs
