[package]
name = "alco"
version = "0.1.0"
authors = ["Lorenz Schmidt <bytesnake@mailbox.org>"]
edition = "2018"
license = "MIT"
description = "Automatic algorithmic complexity estimation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
itertools = "0.10.1"
rand = "0.8"
